[package]
name = "CAGrepeat-analyzer"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Gaurav Sablok <codeprog@icloud.com>"]
description = "CAG repeat for human genomics"
homepage = "https://github.com/omicscode/CAGrepeat-analyzer"
repository = "https://github.com/omicscode/CAGrepeat-analyzer"

[dependencies]
charts = "0.3.0"
clap = { version = "4.5.46", features = ["derive"] }
figlet-rs = "0.1.5"
plotpy = "1.13.0"
plotters = "0.3.7"
tokio = { version = "1.47.1", features = ["full"] }
